do some changes
add pageDB、pageruser，modify PageBase
change the position of dbml file
insert button click event

--- a/prepare for wedding/master/Base.Master
+++ b/prepare for wedding/master/Base.Master
@@ -20,7 +20,7 @@
     <div class="divWholeWebsite">
         <div class="divWholeWebsiteTop">
             <div class="divWholeWebsiteTopLeft shake shake-slow">
-                <img src="/image/welcome.jpg" alt="" title="" width="200" />
+                <img src="../img/welcome.jpg" alt="" title="" width="200" />
             </div>
             <div class="divWholeWebsiteTopCenter">
                 <div class="divHeadline">
