--- a/prepare for wedding/master/Base.Master
+++ b/prepare for wedding/master/Base.Master
@@ -34,7 +34,7 @@
         <div class="divWholeWebsiteRight">
             <ul class="divWholeWebsiteRightMenu">
                 <li><a href="/main/about.aspx">我们</a></li>
-                <li><a href="#">相册</a></li>
+                <li><a href="/main/Pics.aspx">相册</a></li>
                 <li><a href="/main/address.aspx">地址</a></li>
                 <li><a href="/main/guest.aspx">捧场</a></li>
                 <li><a href="/main/wish.aspx">祝福</a></li>
