--- a/prepare for wedding/master/Base2.Master
+++ b/prepare for wedding/master/Base2.Master
@@ -8,6 +8,7 @@
     <link href="../css/css.css" rel="Stylesheet" media="all" />
     <script type="text/javascript" src="../js/jquery/jquery-1.11.1.js"></script>
     <script type="text/javascript" src="/js/jquery/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.easing.1.3.js"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
